--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.25.3",
     "axios": "^1.9.0",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "npm": "^11.4.1",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
